fix mole alignment

--- a/whackAMole/styles.css
+++ b/whackAMole/styles.css
@@ -31,7 +31,7 @@ td {
     position: relative;
     content: '';
     width: 20vw;
-    height: 11vw;
+    height: 11.3vw;
     /* z-index: 1; */
     /* display: inherit; */
 }
